feat: apply rabbitmq