@@ -1,110 +1,135 @@
 package com.cinehub.booking.service;
 
+import com.cinehub.booking.client.PricingClient;
+import com.cinehub.booking.dto.external.SeatPriceResponse;
+import com.cinehub.booking.dto.BookingResponse;
 import com.cinehub.booking.entity.*;
-import com.cinehub.booking.dto.*;
+import com.cinehub.booking.events.BookingCreatedEvent;
+import com.cinehub.booking.events.BookingStatusUpdatedEvent;
+import com.cinehub.booking.events.PaymentCompletedEvent;
+import com.cinehub.booking.events.PaymentFailedEvent;
+import com.cinehub.booking.events.SeatLockedEvent;
 import com.cinehub.booking.repository.BookingRepository;
-import com.cinehub.booking.config.SeatAlreadyLockedException;
-import com.cinehub.booking.client.*;
-
+import com.cinehub.booking.producer.BookingProducer;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
 import java.math.BigDecimal;
-import java.util.stream.Collectors;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.UUID;
-import java.util.concurrent.atomic.AtomicReference;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class BookingService {
 
         private final BookingRepository bookingRepository;
-        private final ShowtimeClient showtimeClient;
-        private final SeatLockClient seatLockClient;
         private final PricingClient pricingClient;
+        private final BookingProducer bookingProducer;
 
         @Transactional
-        public BookingResponse createBooking(BookingRequest request) {
-                // Lấy thông tin suất chiếu
-                ShowtimeResponse showtime = showtimeClient.getShowtimeById(request.getShowtimeId());
-                if (showtime == null) {
-                        throw new RuntimeException("Showtime not found: " + request.getShowtimeId());
-                }
+        public void handleSeatLocked(SeatLockedEvent data) {
+                log.info("🎟️ Received SeatLocked event: showtime={}, seats={}, user={}",
+                                data.showtimeId(), data.seatIds(), data.userId());
 
-                AtomicReference<BigDecimal> totalSeatPrice = new AtomicReference<>(BigDecimal.ZERO);
-
-                // Tạo tạm bookingId để lock seat
-                UUID tempBookingId = UUID.randomUUID();
-
-                // Danh sách seat đã booking
-                List<BookingSeat> bookedSeats = request.getSeatIds().stream().map(seatId -> {
-                        // Lock ghế
-                        SeatLockResponse lockResponse = seatLockClient.lockSeat(
-                                request.getShowtimeId(),
-                                seatId,
-                                tempBookingId
-                        );
-
-                        if (!"LOCKED".equals(lockResponse.getStatus())) {
-                        throw new SeatAlreadyLockedException(seatId.toString());
-                        }
-
-                        // Lấy seatType từ lockResponse
-                        String seatType = lockResponse.getSeatType();
-
-                        // Lấy giá ghế theo seatType từ pricing-service
-                        SeatPriceResponse seatPriceResponse = pricingClient.getSeatPrice(seatType);
-                        BigDecimal seatPrice = seatPriceResponse != null ? seatPriceResponse.getPrice() : BigDecimal.ZERO;
-
-                        // Cộng dồn tổng
-                        totalSeatPrice.set(totalSeatPrice.get().add(seatPrice));
-
-                        // Tạo đối tượng BookingSeat
-                        return BookingSeat.builder()
-                                .seatId(seatId)
-                                .price(seatPrice)
-                                .status(SeatStatus.RESERVED)
-                                .build();
-                }).collect(Collectors.toList());
-                
-                // Lấy giá combo (nếu có)
-                BigDecimal comboTotal = BigDecimal.ZERO;
-                if (request.getComboIds() != null && !request.getComboIds().isEmpty()) {
-                        comboTotal = pricingClient.getCombos(request.getComboIds()).stream()
-                                .map(ComboResponse::getPrice)
-                                .reduce(BigDecimal.ZERO, BigDecimal::add);
-                }
-
-                BigDecimal subtotal = totalSeatPrice.get().add(comboTotal);
-
-                // Áp dụng khuyến mãi
-                BigDecimal discount = BigDecimal.ZERO;
-                if (request.getPromotionIds() != null && !request.getPromotionIds().isEmpty()) {
-                discount = pricingClient.getPromotions(request.getPromotionIds()).stream()
-                        .map(promo -> subtotal.multiply(BigDecimal.valueOf(promo.getDiscountPercent()).divide(BigDecimal.valueOf(100))))
-                        .reduce(BigDecimal.ZERO, BigDecimal::add);
-                }
-
-                BigDecimal finalTotal = subtotal.subtract(discount);
-
-                // Tạo booking chính thức
+                // 1️⃣ Tạo Booking mới
                 Booking booking = Booking.builder()
                                 .id(UUID.randomUUID())
-                                .userId(request.getUserId())
-                                .showtimeId(request.getShowtimeId())
-                                .totalPrice(finalTotal)
+                                .userId(data.userId())
+                                .showtimeId(data.showtimeId())
                                 .status(BookingStatus.PENDING)
+                                .createdAt(LocalDateTime.now())
+                                .updatedAt(LocalDateTime.now())
                                 .build();
 
-                // Gán lại quan hệ
-                bookedSeats.forEach(seat -> seat.setBooking(booking));
-                booking.setSeats(bookedSeats);
+                // 2️⃣ Tính giá từng ghế theo seatType tương ứng
+                List<BookingSeat> seats = new ArrayList<>();
+                BigDecimal total = BigDecimal.ZERO;
 
+                for (int i = 0; i < data.seatIds().size(); i++) {
+                        UUID seatId = data.seatIds().get(i);
+                        String seatType = data.seatTypes().size() > i ? data.seatTypes().get(i) : "STANDARD";
+
+                        SeatPriceResponse seatPrice = pricingClient.getSeatPrice(seatType);
+                        BigDecimal price = seatPrice != null ? seatPrice.getBasePrice() : BigDecimal.ZERO;
+
+                        seats.add(BookingSeat.builder()
+                                        .seatId(seatId)
+                                        .price(price)
+                                        .status(SeatStatus.RESERVED)
+                                        .booking(booking)
+                                        .build());
+
+                        total = total.add(price);
+                }
+
+                booking.setSeats(seats);
+                booking.setTotalPrice(total);
+
+                // 3️⃣ Lưu DB
                 bookingRepository.save(booking);
-                return mapToResponse(booking);
+
+                log.info("✅ Booking created: {} | total={} | seats={}",
+                                booking.getId(), total, seats.size());
+
+                bookingProducer.sendBookingCreatedEvent(
+                                new BookingCreatedEvent(
+                                                booking.getId(),
+                                                booking.getUserId(),
+                                                booking.getShowtimeId(),
+                                                booking.getSeats().stream()
+                                                                .map(BookingSeat::getSeatId)
+                                                                .toList(),
+                                                booking.getTotalPrice()));
         }
+
+        // … phần imports & class như bạn đang có …
+
+        @Transactional
+        public void onPaymentSuccess(PaymentCompletedEvent evt) {
+                var booking = bookingRepository.findById(evt.bookingId())
+                                .orElseThrow(() -> new RuntimeException("Booking not found: " + evt.bookingId()));
+
+                if (booking.getStatus() == BookingStatus.CONFIRMED)
+                        return; // idempotent
+                booking.setStatus(BookingStatus.CONFIRMED);
+                booking.setUpdatedAt(LocalDateTime.now());
+                bookingRepository.save(booking);
+
+                bookingProducer.sendBookingStatusUpdatedEvent(
+                                new BookingStatusUpdatedEvent(
+                                                booking.getId(),
+                                                booking.getShowtimeId(),
+                                                booking.getSeats().stream().map(BookingSeat::getSeatId).toList(),
+                                                "CONFIRMED"));
+                log.info("✅ Booking {} confirmed by payment", booking.getId());
+        }
+
+        @Transactional
+        public void onPaymentFailed(PaymentFailedEvent evt) {
+                var booking = bookingRepository.findById(evt.bookingId())
+                                .orElseThrow(() -> new RuntimeException("Booking not found: " + evt.bookingId()));
+
+                if (booking.getStatus() == BookingStatus.CANCELLED)
+                        return; // idempotent
+                booking.setStatus(BookingStatus.CANCELLED);
+                booking.setUpdatedAt(LocalDateTime.now());
+                bookingRepository.save(booking);
+
+                bookingProducer.sendBookingStatusUpdatedEvent(
+                                new BookingStatusUpdatedEvent(
+                                                booking.getId(),
+                                                booking.getShowtimeId(),
+                                                booking.getSeats().stream().map(BookingSeat::getSeatId).toList(),
+                                                "CANCELLED"));
+                log.info("🚫 Booking {} cancelled (payment failed)", booking.getId());
+        }
+
+        // ========== REST CRUD cho FE hoặc admin test ==========
 
         public BookingResponse getBookingById(UUID id) {
                 Booking booking = bookingRepository.findById(id)
@@ -115,43 +140,35 @@ public class BookingService {
         public List<BookingResponse> getBookingsByUser(UUID userId) {
                 return bookingRepository.findByUserId(userId).stream()
                                 .map(this::mapToResponse)
-                                .collect(Collectors.toList());
+                                .toList();
+        }
+
+        @Transactional
+        public void deleteBooking(UUID id) {
+                bookingRepository.deleteById(id);
         }
 
         @Transactional
         public BookingResponse updateBookingStatus(UUID id, String status) {
                 Booking booking = bookingRepository.findById(id)
                                 .orElseThrow(() -> new RuntimeException("Booking not found: " + id));
+
                 booking.setStatus(BookingStatus.valueOf(status.toUpperCase()));
+                booking.setUpdatedAt(LocalDateTime.now());
                 bookingRepository.save(booking);
 
+                log.info("🔄 Booking {} status updated to {}", booking.getId(), booking.getStatus());
                 return mapToResponse(booking);
         }
 
-        @Transactional
-        public void deleteBooking(UUID id) {
-                Booking booking = bookingRepository.findById(id)
-                                .orElseThrow(() -> new RuntimeException("Booking not found: " + id));
-                bookingRepository.delete(booking);
-        }
-
-        // helper function
+        // Helper mapper
         private BookingResponse mapToResponse(Booking booking) {
-                List<BookingSeatResponse> seatResponses = booking.getSeats().stream()
-                                .map(seat -> BookingSeatResponse.builder()
-                                                .seatId(seat.getSeatId())
-                                                .price(seat.getPrice())
-                                                .status(seat.getStatus().name())
-                                                .build())
-                                .collect(Collectors.toList());
-
                 return BookingResponse.builder()
                                 .bookingId(booking.getId())
                                 .userId(booking.getUserId())
                                 .showtimeId(booking.getShowtimeId())
-                                .totalPrice(booking.getTotalPrice())
                                 .status(booking.getStatus().name())
-                                .seats(seatResponses)
+                                .totalPrice(booking.getTotalPrice())
                                 .createdAt(booking.getCreatedAt())
                                 .updatedAt(booking.getUpdatedAt())
                                 .build();
